--- a/HTML_CSS/contato.html
+++ b/HTML_CSS/contato.html
@@ -46,6 +46,16 @@
                     <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
                 </div>
 
+                <div>
+                    <p>Qual horário prefere ser atendido?</p>
+                    <select>
+                        <option>Manhã</option>
+                        <option>Tarde</option>
+                        <option>Noite</option>
+                    </select>
+                </div>
+                
+
                 <label class="checkbox"><input type="checkbox"> Gostaria de receber nossas novidades por email?</label>
 
                 <input type="submit" value="Enviar formulário">
