--- a/HTML_CSS/contato.html
+++ b/HTML_CSS/contato.html
@@ -36,14 +36,20 @@
 
                 <div>
                     <p>Como prefere o nosso contato?</p>
-                    <label for="radio-email">Email</label>
-                    <input type="radio" name="contato" value="email" id="radio-email">
-
-                    <label for="radio-telefone">Telefone</label>
-                    <input type="radio" name="contato" value="telefone" id="radio-telefone">
-
-                    <label for="radio-whatsapp">Whatsapp</label>
-                    <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                    <label for="radio-email">
+                        <input type="radio" name="contato" value="email" id="radio-email">
+                        Email
+                    </label>
+                
+                    <label for="radio-telefone">
+                        <input type="radio" name="contato" value="telefone" id="radio-telefone"> 
+                        Telefone
+                    </label>
+                
+                    <label for="radio-whatsapp">
+                        <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                        WhatsApp
+                    </label>
                 </div>
 
                 <div>
