--- a/HTML_CSS/contato.html
+++ b/HTML_CSS/contato.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png"></h1>
+                <h1><img src="logo.png" alt="Logo da barbearia Alura"></h1>
             
                 <nav>
                     <ul>
@@ -34,8 +34,8 @@
                 <label for="mensagem">Mensagem</label>
                 <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
-                <div>
-                    <p>Como prefere o nosso contato?</p>
+                <fieldset>
+                    <legend>Como prefere o nosso contato?</legend>
                     <label for="radio-email">
                         <input type="radio" name="contato" value="email" id="radio-email">
                         Email
@@ -50,16 +50,16 @@
                         <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>
                         WhatsApp
                     </label>
-                </div>
+                </fieldset>
 
-                <div>
-                    <p>Qual horário prefere ser atendido?</p>
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido?</legend>
                     <select>
                         <option>Manhã</option>
                         <option>Tarde</option>
                         <option>Noite</option>
                     </select>
-                </div>
+                </fieldset>
                 
 
                 <label class="checkbox"><input type="checkbox"> Gostaria de receber nossas novidades por email?</label>
@@ -68,7 +68,7 @@
             </form>
         </main>
         <footer>
-            <img src="logo-branco.png">
+            <img src="logo-branco.png" alt="Logo da barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2023</p>
         </footer>
     </body>
