--- a/HTML_CSS/produtos.html
+++ b/HTML_CSS/produtos.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png"></h1>
+                <h1><img src="logo.png" alt="Logo da barbearia Alura"></h1>
             
                 <nav>
                     <ul>
@@ -43,7 +43,7 @@
             </ul>
         </main>
         <footer>
-            <img src="logo-branco.png">
+            <img src="logo-branco.png" alt="Logo da barbearia Alura">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2023</p>
         </footer>
     </body>
