--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -57,7 +57,7 @@
                         <li class="itens">Profissionais Qualificados</li>
                         <li class="itens">Pontualidade</li>
                         <li class="itens">Limpeza</li>
-                    </ul><img src="beneficios.jpg" class="imagembeneficios">
+                    </ul><img src="beneficios.jpg" class="imagem-beneficios">
                 </div>                
                 <div class="video">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" 
