--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="cabecalho">
         <button class="cabecalho_menu">Menu</button>
-        <img src="assets/img/logo.svg" alt "Logotipo da MZC" class="cabecalho_logo">
+        <img src="assets/img/logo.svg" alt="Logotipo da MZC" class="cabecalho_logo">
         <button class="cabecalho_notificacao">Notificação</button>
     </header>
 </body>
