--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header class="cabecalho">
-        <button class="cabecalho_menu">Menu</button>
+        <button class="cabecalho_menu" area-label="Menu"><i></i></button>
         <img src="assets/img/logo.svg" alt="Logotipo da MZC" class="cabecalho_logo">
-        <button class="cabecalho_notificacao">Notificação</button>
+        <button class="cabecalho_notificacao" area-label="Notificação"><i></i></button>
     </header>
 </body>
 </html>
