--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -17,5 +17,14 @@
         <img src="assets/img/logo.svg" alt="Logotipo da MZC" class="cabecalho_logo">
         <button class="cabecalho_notificacao" area-label="Notificação"><i></i></button>
     </header>
+    <nav class="menu-lateral">
+        <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral_logo">
+        <a href="#" class="menu-lateral_link menu-lateral_link--inicio menu-lateral_link--ativo">Início</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link--videos">Videos</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link--picos">Picos</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link--integrantes">Integrantes</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link--camisas">Camisas</a>
+        <a href="#" class="menu-lateral_link menu-lateral_link--pinturas">Pinturas</a>
+    </nav>
 </body>
 </html>
