--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -17,7 +17,7 @@
         <img src="assets/img/logo.svg" alt="Logotipo da MZC" class="cabecalho_logo">
         <button class="cabecalho_notificacao" area-label="Notificação"><i></i></button>
     </header>
-    <nav class="menu-lateral">
+    <nav class="menu-lateral menu-lateral--ativo">
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral_logo">
         <a href="#" class="menu-lateral_link menu-lateral_link--inicio menu-lateral_link--ativo">Início</a>
         <a href="#" class="menu-lateral_link menu-lateral_link--videos">Videos</a>
@@ -26,5 +26,6 @@
         <a href="#" class="menu-lateral_link menu-lateral_link--camisas">Camisas</a>
         <a href="#" class="menu-lateral_link menu-lateral_link--pinturas">Pinturas</a>
     </nav>
+    <script src="index.js"></script>
 </body>
 </html>
