--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -26,6 +26,20 @@
         <a href="#" class="menu-lateral_link menu-lateral_link--camisas">Camisas</a>
         <a href="#" class="menu-lateral_link menu-lateral_link--pinturas">Pinturas</a>
     </nav>
+    <main class="principal">
+        <h2 class="titulo-pagina">Início</h2>
+        <article class="cartao">
+            <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao-imagem">
+            <div class="cartao_conteudo">
+                <p class="cartao_destaque">Vídeo em destaque</p>
+                <h3 class="cartao_titulo">HZC -Título</h3>
+                <p class="cartao_perfil">Bruno Lopez</p>
+                <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                <p class="cartao_info cartao_info--visualizacao">33 visualizações</p>
+                <button class="carto_botao cartao cartao_botao--play cartao_botao--destaque">Assistir agora</button>
+            </div>
+        </article>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
