Estilização básica do cartão

--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -36,7 +36,7 @@
                 <p class="cartao_perfil">Bruno Lopez</p>
                 <p class="cartao_info cartao_info--tempo">33 minutos</p>
                 <p class="cartao_info cartao_info--visualizacao">33 visualizações</p>
-                <button class="carto_botao cartao cartao_botao--play cartao_botao--destaque">Assistir agora</button>
+                <button class="cartao_botao cartao_botao--play cartao_botao--destaque">Assistir agora</button>
             </div>
         </article>
     </main>
