--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -28,7 +28,7 @@
     </nav>
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
-        <article class="cartao">
+        <article class="cartao cartao--destaque">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao-imagem">
             <div class="cartao_conteudo">
                 <p class="cartao_destaque">Vídeo em destaque</p>
@@ -39,6 +39,95 @@
                 <button class="cartao_botao cartao_botao--play cartao_botao--destaque">Assistir agora</button>
             </div>
         </article>
+        <section class="secao">
+            <h3 class="titulo-secao">Videos mais vistos</h3>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+        </section>
+        <article class="cartao cartao--destaque">
+            <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao-imagem">
+            <div class="cartao_conteudo">
+                <p class="cartao_destaque">Vídeo em destaque</p>
+                <h3 class="cartao_titulo">HZC -Título</h3>
+                <p class="cartao_perfil">Bruno Lopez</p>
+                <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                <p class="cartao_info cartao_info--visualizacao">33 visualizações</p>
+                <button class="cartao_botao cartao_botao--play cartao_botao--destaque">Assistir agora</button>
+            </div>
+        </article>
+        <section class="secao">
+            <h3 class="titulo-secao">Videos mais vistos</h3>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao-imagem">
+                <div class="cartao_conteudo">                    
+                    <p class="cartao_perfil">Bruno Lopez</p>
+                    <h3 class="cartao_titulo">HZC -Título</h3>                    
+                    <p class="cartao_info cartao_info--tempo">33 minutos</p>
+                    <button class="cartao_botao cartao_botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+        </section>
     </main>
     <script src="index.js"></script>
 </body>
