--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -15,6 +15,7 @@
     <header class="cabecalho">
         <button class="cabecalho_menu" area-label="Menu"><i></i></button>
         <img src="assets/img/logo.svg" alt="Logotipo da MZC" class="cabecalho_logo">
+        <p class="cabecalho_perfil">César Guilherme</p>
         <button class="cabecalho_notificacao" area-label="Notificação"><i></i></button>
     </header>
     <nav class="menu-lateral menu-lateral--ativo">
@@ -38,6 +39,37 @@
                 <p class="cartao_info cartao_info--visualizacao">33 visualizações</p>
                 <button class="cartao_botao cartao_botao--play cartao_botao--destaque">Assistir agora</button>
             </div>
+        </article>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao_titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao_link">Ver todos</a>
+            <ul class="cartao_lista">
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+            </ul>
         </article>
         <section class="secao">
             <h3 class="titulo-secao">Videos mais vistos</h3>
@@ -78,6 +110,37 @@
                 </div>
             </article>
         </section>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao_titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao_link">Ver todos</a>
+            <ul class="cartao_lista">
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+                <li class="cartao_item">
+                    <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao_item-thumbnail">
+                    <h4 class="cartao_item-titulo">HZM - Love machine</h4>
+                    <p class="cartao_item-perfil">César Guilherme</p>
+                </li>
+            </ul>
+        </article>
         <article class="cartao cartao--destaque">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao-imagem">
             <div class="cartao_conteudo">
