--- a/HTML_CSS/Flex Grid e Main/index.html
+++ b/HTML_CSS/Flex Grid e Main/index.html
@@ -15,7 +15,7 @@
     <header class="cabecalho">
         <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
-        <p class="cabecalho__perfil">Bruno Lopez</p>
+        <p class="cabecalho__perfil">César L. Guilherme</p>
         <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
     </header>
     <nav class="menu-lateral">
@@ -29,54 +29,54 @@
     </nav>
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
-        <article class="cartao cartao--destaque">
+        <article class="cartao cartao--destaque destaque-video">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
                 <h3 class="cartao__titulo">HZC - Título</h3>
-                <p class="cartao__perfil">Bruno Lopez</p>
+                <p class="cartao__perfil">César L. Guilherme</p>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
         </article>
-        <article class="cartao cartao--recentes">
+        <article class="cartao cartao--recentes videos-recentes">
             <h3 class="cartao__titulo">Vídeos recentes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
             </ul>
         </article>
-        <section class="secao">
+        <section class="secao secao">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
@@ -85,7 +85,7 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
@@ -94,7 +94,7 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
@@ -103,61 +103,61 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
-        <article class="cartao cartao--recentes">
+        <article class="cartao cartao--recentes produtos-recentes">
             <h3 class="cartao__titulo">Vídeos recentes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">César L. Guilherme</p>
                 </li>
             </ul>
         </article>
-        <article class="cartao cartao--destaque">
+        <article class="cartao cartao--destaque destaque-produtos">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
                 <h3 class="cartao__titulo">HZC - Título</h3>
-                <p class="cartao__perfil">Bruno Lopez</p>
+                <p class="cartao__perfil">César L. Guilherme</p>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
         </article>
-        <section class="secao">
+        <section class="secao secao-produtos">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
@@ -166,7 +166,7 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
@@ -175,7 +175,7 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
@@ -184,7 +184,7 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <p class="cartao__perfil">César L. Guilherme</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
