--- a/HTML_CSS/Alura-Plus/index.html
+++ b/HTML_CSS/Alura-Plus/index.html
@@ -10,7 +10,8 @@
 <body>
     <section class="container principal">
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ com o Alura Línguas.">
+        <img src="img/Combo.png" alt="O Combo+ é a junção do Alura+ com o Alura Línguas.">
+        <a class="container__botao" href="www.alura.com.br">Assine por 12x de R$120,00*</a>
     </section>
 
 </body>
