--- a/HTML_CSS/Alura-Plus/index.html
+++ b/HTML_CSS/Alura-Plus/index.html
@@ -24,7 +24,7 @@
         <img src="img/Plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__titulo">Aproveite a tela grande da TV ou assista no tablet, latptop, celular e outros 
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, latptop, celular e outros 
                 aparelhos. Nossa seleção de cursos não para de cescer.</p>
         </div>
     </section>
