--- a/HTML_CSS/AluraBooks/index.html
+++ b/HTML_CSS/AluraBooks/index.html
@@ -9,10 +9,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        
+    <header class="cabecalho">
+        <div class="container">
+            <span class="cabecalho__menu-hamburguer container__imagem"></span>
+            <img src="img/Logo.svg" alt="Logo do AluraBooks">
+        </div>
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Favoritos do AluraBooks" class="container__imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+        </div>        
     </header>
-    <h1>Alura Books</h1>
+    
     <footer>
 
     </footer>
