--- a/HTML_CSS/AluraBooks/index.html
+++ b/HTML_CSS/AluraBooks/index.html
@@ -64,6 +64,29 @@
     <div class="swiper-button-next"></div>
   
   </div>
+  <div class="card">
+    <!--1ª linha-->
+    <div class="card__descricao">
+        <!--1ªcoluna-->
+        <div class="descricao">            
+            <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+            <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+            <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google</p>
+        </div>
+        <!--2ªcoluna-->
+        <img src="img/Angular.svg" alt="Imagem Angular" class="descricao__imagem">
+    </div>
+    <!--2º linha-->
+    <div class="card__botoes">
+        <ul class="botoes">
+            <!--1ª coluna-->
+            <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+            <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar ao carrinho de compras"></li>
+        </ul>
+        <!--2ª Coluna-->
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+    </div>
+  </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
