--- a/HTML_CSS/AluraBooks/index.html
+++ b/HTML_CSS/AluraBooks/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>    
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,10 +28,17 @@
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Buscas</a></li>
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design & UX</a></li>
             </ul>            
-            <img src="img/Logo.svg" alt="Logo do AluraBooks">
+            <img src="img/Logo.svg" alt="Logo do AluraBooks" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+
+        <ul class="opcoes">
+            <li class="opcoes__item">Categorias</li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">FMinha estante</a></li>
+        </ul>
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Favoritos do AluraBooks" class="container__imagem"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="Favoritos do AluraBooks" class="container__imagem container__imagem-transparente"></a>
             <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
         </div>        
