--- a/HTML_CSS/AluraBooks/index.html
+++ b/HTML_CSS/AluraBooks/index.html
@@ -188,8 +188,10 @@
     </section>
 
     <section class="contato">
-        <h2 class="contato__titulo">Fique por dentor das novidades!</h2>
+        <div class="contato__descricao">
+            <h2 class="contato__titulo">Fique por dentor das novidades!</h2>
         <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>        
         <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
 
