--- a/HTML_CSS/AluraBooks/index.html
+++ b/HTML_CSS/AluraBooks/index.html
@@ -46,12 +46,20 @@
             </ul>
 
             <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
-            <li class="opcoes__item"><a href="#" class="opcoes__link">FMinha estante</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Favoritos do AluraBooks" class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#" class="container__link">
+                <img src="img/Favoritos.svg" alt="Favoritos do AluraBooks" class="container__imagem container__imagem-transparente">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#">
+                <img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>        
     </header>
     <section class="banner">
