--- a/CHAT_GPT_Produtividade/index.html
+++ b/CHAT_GPT_Produtividade/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <header class="cabecalho">
-        <div class="cabecalho__logo">
-            <img src="./img/modo_claro/vidflow-logo-light-mode.png" alt="Página inicial do VidFlow">
+        <div class="cabecalho__logo">            
+            <img id="logo-vidflow" src="./img/modo_claro/vidflow-logo-light-mode.png" alt="Página inicial do VidFlow">
         </div>
 
         <div class="cabecalho__pesquisa-container">
