--- a/CHAT_GPT_Produtividade/index.html
+++ b/CHAT_GPT_Produtividade/index.html
@@ -260,11 +260,19 @@
             <span class="newsletter__inscreva-se">Inscreva-se para saber as novidades!</span>
 
             <div class="newsletter__input-e-botao-container">
-                <input class="newsletter__input" type="email" placeholder="Insira seu endereço de email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$" title="Por favor, insira um endereço de email válido.">
+                <input class="newsletter__input" type="email" placeholder="Insira seu endereço de email"
+                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$"
+                    title="Por favor, insira um endereço de email válido.">
                 <button class="newsletter__botao-inscrever">Inscrever</button>
             </div>
-
         </form>
+
+        <dialog class="dialog-confirmacao">
+            <div class="dialog-confirmacao__conteudo">
+                <button class="dialog-confirmacao__fechar-modal">&times;</button>
+                <p>Obrigado por se inscrever!</p>
+            </div>
+        </dialog>
 
         <ul class="videos-container">
 
